--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Evil Apple Wiki
-Description: A public collaborative wiki journaling corporate misbehaviour
+description: A public collaborative wiki journaling corporate misbehaviour
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
