--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 title: Evil Apple Wiki
 description: A public collaborative wiki journaling corporate misbehaviour
 remote_theme: pages-themes/cayman@v0.2.0
+paginate: 5
+paginate_path: "/page:num/"
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 - jekyll-seo-tag
+- jekyll-paginate
